objects/Disbursal_Exception__c.object
<CustomObject>
    <fields>
        <fullName>CL_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CL Contract</label>
        <referenceTo>loan__Loan_Account__c</referenceTo>
        <relationshipLabel>Disbursal Exception</relationshipLabel>
        <relationshipName>Disbursal_Exception</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Disbursal_Transaction_Distribution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Disbursal Transaction Distribution</label>
        <referenceTo>loan__Disbursal_Txn_Distribution__c</referenceTo>
        <relationshipLabel>Disbursal Exception</relationshipLabel>
        <relationshipName>Disbursal_Exception</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <label>Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Disbursal Exception</label>
    <nameField>
        <displayFormat>DE-{000000000}</displayFormat>
        <label>Disbursal Exception Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Disbursal Exception</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>